update some files important for pip install

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = pyConrad
-summary = Add a short description here!
-author = Stephan Seitz
-author-email = stephan.seitz@fau.de
-license = none
-home-page = http://...
+summary = A Python wrapper for the CONRAD framework (https://www5.cs.fau.de/conrad/)
+author = Andreas Maier
+author-email = andreas.maier@fau.de
+license = GPL 3.0
+home-page = https://www5.cs.fau.de/conrad/
 description-file = README.rst
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.python.org/pypi?%3Aaction=list_classifiers
