--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@
 numpy
 jpype1
 pathlib 
--e git+git://git5.cs.fau.de/PyConrad/pyconrad_java.git@v0.0.1#egg=pyconrad_java
+-e git+https://git5.cs.fau.de/PyConrad/pyconrad_java.git@v0.0.1#egg=pyconrad_java
