--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ author = Andreas Maier
 author-email = andreas.maier@fau.de
 license = GPL 3.0
 home-page = https://www5.cs.fau.de/conrad/
-description-file = README.rst
+description-file = README.md
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.python.org/pypi?%3Aaction=list_classifiers
 classifier =
