--- a/setup.cfg
+++ b/setup.cfg
@@ -75,4 +75,4 @@ autodoc_tree_index_modules = True
 # Options for the devpi: PyPI server and packaging tool
 # VCS export must be deactivated since we are using setuptools-scm
 no-vcs = 1
-formats = bdist_wheel
+formats = sdist
