--- a/setup.cfg
+++ b/setup.cfg
@@ -37,21 +37,22 @@ packages =
 #    ReportLab>=1.2
 #    RXP
 
-[test]
-# py.test options when running `python setup.py test`
-addopts = tests
+# [test]
+# # py.test options when running `python setup.py test`
+# addopts = tests
 
-[tool:pytest]
-# Options for py.test:
-# Specify command line options as you would do when invoking py.test directly.
-# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
-# in order to write a coverage file that can be read by Jenkins.
-addopts =
-    --cov pyconrad --cov-report term-missing
-    --verbose
+# [tool:pytest]
+# # Options for py.test:
+# # Specify command line options as you would do when invoking py.test directly.
+# # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
+# # in order to write a coverage file that can be read by Jenkins.
+# addopts =
+#     --cov pyconrad --cov-report term-missing
+#     --verbose
 
 [aliases]
 docs = build_sphinx
+test = pytest
 
 [bdist_wheel]
 # Use this option if your package is pure-python
