--- a/setup.cfg
+++ b/setup.cfg
@@ -14,8 +14,9 @@ classifier =
 
 [entry_points]
 # Add here console scripts like:
-# console_scripts =
-#     script_name = pyconrad.module:function
+gui_scripts =
+    conrad = pyconrad._scripts:start_pyconrad
+    conrad_imagej = pyconrad._scripts:start_conrad_imagej
 # For example:
 # console_scripts =
 #     fibonacci = pyconrad.skeleton:run
