- remove compare_conrad_imagej - fix desktop files - fix open vtk files with conrad_imagej

--- a/data_files/5.cs.fau.conrad.desktop
+++ b/data_files/5.cs.fau.conrad.desktop
@@ -1,12 +1,12 @@
 [Desktop Entry]
 Comment[de_DE]=
 Comment=
-Exec=conrad_imagej %F
+Exec=conrad
 GenericName[de_DE]=
 GenericName=
-MimeType=inode/directory;image/x-xpixmap;image/x-xbitmap;image/x-portable-pixmap;image/x-portable-graymap;image/x-portable-bitmap;image/x-eps;image/webp;image/vnd.microsoft.icon;image/vnd.adobe.photoshop;image/tiff;image/png;image/jpeg;image/gif;image/bmp;application/dicom
-Name[de_DE]=CONRAD ImageJ
-Name=CONRAD ImageJ
+#MimeType=inode/directory;image/x-xpixmap;image/x-xbitmap;image/x-portable-pixmap;image/x-portable-graymap;image/x-portable-bitmap;image/x-eps;image/webp;image/vnd.microsoft.icon;image/vnd.adobe.photoshop;image/tiff;image/png;image/jpeg;image/gif;image/bmp;application/dicom
+Name[de_DE]=CONRAD
+Name=CONRAD
 NoDisplay=true
 Path=
 StartupNotify=true
@@ -17,3 +17,5 @@ X-DBUS-ServiceName=
 X-DBUS-StartupType=none
 X-KDE-SubstituteUID=false
 X-KDE-Username=
+Categories=Science;Education
+
