--- a/data_files/5.cs.fau.conrad_imagej.desktop
+++ b/data_files/5.cs.fau.conrad_imagej.desktop
@@ -8,6 +8,7 @@ MimeType=inode/directory;image/x-xpixmap;image/x-xbitmap;image/x-portable-pixmap
 Name[de_DE]=CONRAD ImageJ
 Name=CONRAD ImageJ
 NoDisplay=true
+Icon=conrad
 Path=
 StartupNotify=true
 Terminal=false
@@ -16,4 +17,4 @@ Type=Application
 X-DBUS-ServiceName=
 X-DBUS-StartupType=none
 X-KDE-SubstituteUID=false
-X-KDE-Username=
+Categories=Science;Education
