--- a/setup.cfg
+++ b/setup.cfg
@@ -39,18 +39,18 @@ packages =
 #    RXP
 
 
-# [test]
+[test]
 # # py.test options when running `python setup.py test`
-# addopts = tests
+addopts = tests
 
-# [tool:pytest]
+[tool:pytest]
 # # Options for py.test:
 # # Specify command line options as you would do when invoking py.test directly.
 # # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
 # # in order to write a coverage file that can be read by Jenkins.
-# addopts =
-#     --cov pyconrad --cov-report term-missing
-#     --verbose
+addopts =
+    --cov pyconrad --cov-report term-missing
+    --verbose
 [aliases]
 docs = build_sphinx
 test = pytest
