--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,6 @@ install:
 # command to run tests
 script:
   - pytest # or py.test for Python versions 3.5 and below
+  - python -c "import pyconrad"
+os:
+  - linux
