- add apt package python{,3}-opencl to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,9 @@ script:
   - python -c "import pyconrad"
 os:
   - linux
+
+addons:
+  apt:
+    packages:
+  - python-pyopencl
+  - python3-pyopencl
