--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ python:
   - "nightly"
 # command to install dependencies
 install:
-  - pip install -r requirements.txt
+  - pip install .
 # command to run tests
 script:
   - pytest # or py.test for Python versions 3.5 and below
@@ -24,3 +24,5 @@ addons:
     packages:
     - python-pyopencl
     - python3-pyopencl
+    - opencl-clhpp-headers
+    - opencl-c-headers
