--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ python:
   - "3.7-dev"  # 3.7 development branch
   - "nightly"
 # command to install dependencies
+before_install:
+  - sudo -H pip install --upgrade
+
+
 install:
   - pip install .
 # command to run tests
