--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ python:
 
 install:
   - pip install --upgrade pip
-  - pip install --reinstall setuptools
+  - pip install --ignore-installed setuptools
   - pip install .
 # command to run tests
 script:
