--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ python:
 install:
   - pip install --upgrade pip
   - pip install --ignore-installed setuptools
-  - pip install .
+  - pip install --ignore-installed wheel
+  - pip install -e .
 # command to run tests
 script:
   - pytest # or py.test for Python versions 3.5 and below
