--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ install:
   - pip install --upgrade pip
   - pip install --ignore-installed setuptools
   - pip install --ignore-installed wheel
+  - pip install --ignore-installed pytest-cov
   - pip install -e .
 # command to run tests
 script:
