- skip GUI tests on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,14 @@ python:
   - "3.5"
   - "3.6"
   # - "3.6-dev"  # 3.6 development branch
-  # - "3.7-dev"  # 3.7 development branch
-  # - "nightly"
+  - "3.7-dev"  # 3.7 development branch
+  - "nightly"
 # command to install dependencies
 # before_install:
 #   - sudo -H pip install --upgrade
+allow_failures:
+- python: '3.7-dev'
+- python: 'nightly'
 
 
 install:
