--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
   - pip install --ignore-installed setuptools
   - pip install --ignore-installed wheel
   - pip install --ignore-installed pytest-cov
-  - python -m pip install mako
+  - pip install --ignore-installed pytest
   - python setup.py sdist
   - pip install -e .
   - export DISPLAY=:0.0
