- allow failures for WITH_OPENCL=1

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,8 @@ matrix:
       - python: 'nightly'
     WITH_OPENCL=0:
       allow_failures:
+      - python: '3.5'
+      - python: '3.6'
       - python: '3.7-dev'
       - python: 'nightly'
 
