--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ install:
   - pip install --ignore-installed wheel
   - pip install --ignore-installed pytest-cov
   - pip install --ignore-installed pytest
-  - if $WITH_OPENCL; then pip install --ignore-installed pyopencl; fi;
+  - pip install --ignore-installed pyopencl
   - python setup.py sdist
   - pip install -e .
   - export DISPLAY=:0.0
