- add url to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ name = pyConrad
 summary = A Python wrapper for the CONRAD framework (https://www5.cs.fau.de/conrad/)
 author = Andreas Maier
 author-email = andreas.maier@fau.de
+url = https://git5.cs.fau.de/PyConrad/pyCONRAD
 license = GPL 3.0
 home-page = https://www5.cs.fau.de/conrad/
 description-file = README.md
