--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author-email = andreas.maier@fau.de
 url = https://git5.cs.fau.de/PyConrad/pyCONRAD
 license = GPL 3.0
 home-page = https://www5.cs.fau.de/conrad/
-description-file = README.md
+description-file = README.rst
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.python.org/pypi?%3Aaction=list_classifiers
 classifier =
