- add image/x-panasonic-rw to supported file types of conrad_imagej

--- a/data_files/5.cs.fau.conrad_imagej.desktop
+++ b/data_files/5.cs.fau.conrad_imagej.desktop
@@ -2,7 +2,7 @@
 Comment[de_DE]=
 Exec=conrad_imagej %F
 GenericName=CONRAD ImageJ
-MimeType=inode/directory;image/x-xpixmap;image/x-xbitmap;image/x-portable-pixmap;image/x-portable-graymap;image/x-portable-bitmap;image/x-eps;image/webp;image/vnd.microsoft.icon;image/vnd.adobe.photoshop;image/tiff;image/png;image/jpeg;image/gif;image/bmp;application/dicom;
+MimeType=inode/directory;image/x-xpixmap;image/x-xbitmap;image/x-portable-pixmap;image/x-portable-graymap;image/x-portable-bitmap;image/x-eps;image/webp;image/vnd.microsoft.icon;image/vnd.adobe.photoshop;image/tiff;image/png;image/jpeg;image/gif;image/bmp;application/dicom;image/x-panasonic-rw
 Name[de_DE]=CONRAD ImageJ
 Name=CONRAD ImageJ
 Icon=conrad
