--- a/setup.cfg
+++ b/setup.cfg
@@ -19,8 +19,8 @@ gui_scripts =
     conrad = pyconrad._scripts:start_pyconrad
     conrad_imagej = pyconrad._scripts:start_conrad_imagej
 # For example:
-# console_scripts =
-#     fibonacci = pyconrad.skeleton:run
+console_scripts =
+    pyconrad_run = pyconrad._pyconrad_run.main
 # as well as other entry_points.
 
 
