--- a/.travis.yml
+++ b/.travis.yml
@@ -32,9 +32,9 @@ matrix:
         env:  WITH_OPENCL=1
       - python: '3.6'
         env:  WITH_OPENCL=1
-      - python: '3.7-dev'
+      - python: '3.7'
         env:  WITH_OPENCL=0
-      - python: '3.7-dev'
+      - python: '3.7'
         env:  WITH_OPENCL=1
       - python: 'nightly'
         env:  WITH_OPENCL=0
