Add xenial and osx to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+dist: xenial
 python:
   # - "2.6"
   # - "2.7" #fails
@@ -40,6 +41,10 @@ matrix:
         env:  WITH_OPENCL=0
       - python: 'nightly'
         env:  WITH_OPENCL=1
+      - name: "Python 3.7.2 on macOS"
+          os: osx
+          osx_image: xcode10.2  # Python 3.7.2 running on macOS 10.14.3
+          language: shell       # 'language: python' is an error on Travis CI macOS
 
 
 
