--- a/.travis.yml
+++ b/.travis.yml
@@ -24,26 +24,26 @@ env:
           #- python3-pyopencl
           #- opencl-headers
 
-matrix:
-  fast_finish: true
-  include:
-    #- name: "Python 3.7.1 on Xenial Linux"
-    #python: 3.7           # this works for Linux but is ignored on macOS or Windows
-    #dist: xenial          # required for Python >= 3.7
-   - name: "Python 3.7.2 on macOS"
-     os: osx
-     osx_image: xcode10.2  # Python 3.7.2 running on macOS 10.14.3
-     language: shell       # 'language: python' is an error on Travis CI macOS
-   - name: "Python 3.7.3 on Windows"
-     os: windows           # Windows 10.0.17134 N/A Build 17134
-     language: shell       # 'language: python' is an error on Travis CI Windows
-     before_install:
-      - choco install python
-      - choco install jdk8 
-     env: PATH="/c/Python37:/c/Python37/Scripts:/c/Program Files/Java/jdk1.8.0_211/bin:$PATH"
-  allow_failures:
-    - os: osx
-    - os: windows
+#matrix:
+  #fast_finish: true
+  #include:
+    ##- name: "Python 3.7.1 on Xenial Linux"
+    ##python: 3.7           # this works for Linux but is ignored on macOS or Windows
+    ##dist: xenial          # required for Python >= 3.7
+   #- name: "Python 3.7.2 on macOS"
+     #os: osx
+     #osx_image: xcode10.2  # Python 3.7.2 running on macOS 10.14.3
+     #language: shell       # 'language: python' is an error on Travis CI macOS
+   #- name: "Python 3.7.3 on Windows"
+     #os: windows           # Windows 10.0.17134 N/A Build 17134
+     #language: shell       # 'language: python' is an error on Travis CI Windows
+     #before_install:
+      #- choco install python
+      #- choco install jdk8 
+     #env: PATH="/c/Python37:/c/Python37/Scripts:/c/Program Files/Java/jdk1.8.0_211/bin:$PATH"
+  #allow_failures:
+    #- os: osx
+    #- os: windows
 
 
 
