--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ python:
   - "3.5"
   - "3.6"
   - "3.7"  # 3.7 development branch
+  - "3.8"  # 3.7 development branch
   #- "nightly"
 env:
   - WITH_OPENCL=0
